add_library(RendererApplication RendererApplication.cpp)
target_include_directories(RendererApplication PRIVATE ${CMAKE_SOURCE_DIR}/Window)
target_include_directories(RendererApplication PRIVATE ${CMAKE_SOURCE_DIR}/Renderer)
target_include_directories(RendererApplication PRIVATE ${CMAKE_SOURCE_DIR}/Thirdparty)
target_include_directories(RendererApplication PRIVATE ${CMAKE_BINARY_DIR})

target_link_libraries(RendererApplication PRIVATE Shader)
target_link_libraries(RendererApplication PRIVATE VertexBuffer)
target_link_libraries(RendererApplication PRIVATE VertexArray)
target_link_libraries(RendererApplication PRIVATE ElementArray)
target_link_libraries(RendererApplication PRIVATE Texture)
target_link_libraries(RendererApplication PRIVATE RendererCommand)
target_link_libraries(RendererApplication PRIVATE Renderer)
target_link_libraries(RendererApplication PRIVATE Camera)